Unit test - Troels Kiib 15-06-2021